# bank-payment-alternative

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
account_banking_mandate/: __manifest__.py
account_banking_mandate/models/: account_banking_mandate.py  account_move.py  res_partner.py
account_banking_mandate/tests/: test_invoice_mandate.py  test_mandate.py
account_banking_mandate/views/: account_banking_mandate.xml  account_banking_mandate_view.xml  account_payment_line.xml  account_payment_order.xml  (+2 more)
account_banking_pain_base/: README.rst  __manifest__.py
account_banking_sepa_credit_transfer/: README.rst  __manifest__.py
account_banking_sepa_direct_debit/: __manifest__.py
account_edi_ubl_cii_payment_unece_mandate/: README.rst  __manifest__.py
account_payment_base_oca/: README.rst  __manifest__.py
account_payment_base_oca_sale/: README.rst  __manifest__.py
account_payment_batch_oca/: README.rst  __manifest__.py
account_payment_batch_oca_reconcile/: README.rst  __manifest__.py
account_payment_batch_oca_tier_validation/: README.rst
account_payment_batch_pos/: README.rst  __manifest__.py
account_payment_mandate/: README.rst  __manifest__.py
account_payment_mandate_sale/: README.rst
account_payment_order/: README.rst  __manifest__.py
account_payment_sale/: README.rst  __manifest__.py
account_payment_sepa_base/: README.rst  __manifest__.py
account_payment_sepa_credit_transfer/: README.rst  __manifest__.py
account_payment_sepa_direct_debit/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+214 files in other folders)
